--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>welcome to whack a mole</title>
-    <link rel="stylesheet" href="Styling.CSS" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="info-container">
@@ -23,6 +23,6 @@
       <div class="section" id="7"></div>
       <div class="section" id="8"></div>
     </div>
-    <script src="scripts.JS"></script>
+    <script src="/App.js"></script>
   </body>
 </html>
