--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div class="section" id="7"></div>
       <div class="section" id="8"></div>
     </div>
+    <audio id="pop" src="./soundeffect/poping.mp3"></audio>
+    <audio id="fail" src="./soundeffect/failed.mp3"></audio>
+
     <script src="/App.js"></script>
   </body>
 </html>
