--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div class="info-container">
       <div>your point is:<span class="score">0</span></div>
       <div>time:<span class="timer">60</span></div>
-      <button class="start-btn" onclick="startPlay()">Start and shoot</button>
+    </div>
+    <div class="lvl-con">
+      <button class="btns" onclick="startPlay(1000)">normal</button>
+      <button class="btns" onclick="startPlay(600)">hard</button>
+      <button class="btns" onclick="startPlay(300)">impossible win!!</button>
     </div>
 
     <div class="game">
